--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <section id="event">
     <div class="title">
       <h2>Free Shipping Event</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam exercitationem repellat fugit eligendi aliquid quidem aut nihil ex. Nostrum illo minima quod veritatis incidunt veniam nobis optio reprehenderit repellat magni.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam exercitationem repellat fugit eligendi aliquid </p>
       <a href="#" class="cta">더 보기</a>
     </div>
   </section>
